--- a/.htaccess
+++ b/.htaccess
@@ -51,6 +51,9 @@ Options -MultiViews -Indexes +FollowSymlinks
 
 <IfModule mod_rewrite.c>
  RewriteEngine On
+ RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC]
+ RewriteRule ^(.*)$ http://%1/$1 [R=301,L]
+
  RewriteRule ^logout pages/logout.php [NC,L]
 
  RewriteRule ^google_feed$ google_feed.php [NC,L]
